Menambahkan fitur upload image pada user, store, dan product. Menambahkah contoh endpoint kompleks dan dynamic routing

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+#image folders
+# ignore evertything inside the folders
+uploads/product_thumbnails/*
+uploads/store_profiles/*
+uploads/user_profiles/*
+
+!uploads/product_thumbnails/
+!uploads/store_profiles/
+!uploads/user_profiles/
+
 # Logs
 logs
 *.log
