--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "express": "^4.21.2",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "eslint": "^9.23.0",
