--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
@@ -22,6 +24,6 @@
     "eslint-plugin-prettier": "^5.2.3",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
-    "prisma": "^6.5.0"
+    "prisma": "^6.6.0"
   }
 }
