feat fix : add cors for authorization header dan fix products endpoint

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,10 @@
 DATABASE_URL=""
 JWT_SECRET=""
+
+
 CLOUD_NAME=""
 API_KEY=""
 API_SECRET=""
 COOKIE_SECRET=""
+
+FRONTEND_ORIGIN="http://localhost:5173"
